# react-ml-minimal-template

./: README.md  bun.lockb  dune  dune-project  package.json  react_ml_minimal.opam
dev-tools.locks/ocaml-lsp-server/: lock.dune  ocaml-lsp-server.pkg
dev-tools.locks/ocamlformat/: lock.dune  ocamlformat.pkg
dune.lock/: conf-c++.pkg  lock.dune  spdx_licenses.pkg
src/: App.mlx  dune
